--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-input/mask": "^1.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^6.26.2",
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
