--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-input/mask": "^1.2.10",
+    "mui-one-time-password-input": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-otp-input": "^3.1.1",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
