--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@react-input/mask": "^1.2.10",
+    "@tanstack/react-query": "^5.56.2",
+    "axios": "^1.7.7",
     "mui-one-time-password-input": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "react-otp-input": "^3.1.1",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
